# prismquanta

./: PrismQuanta_Integration_Plan.md  README.md  environment.txt  llm_output.txt  main  pql_test_results.txt  priorities.txt  prismquanta_interface  quantaporto_interface  rules_test.xml  ruleset.xml  run_bdd_tests.ps1  run_bdd_tests.sh  setup_environment.sh  tasks.txt  test_chatgpt.sh  test_gemini.sh  test_jules.sh  test_model_config.sh  test_output.txt  timeout.flag
config/: bias_patterns.txt  environment.txt  ethics_rules.txt  priorities.txt  rewards.txt  rules.txt
docs/: README.md  ethical_framework.md  ethics.md  integration_plan.md  intro.md  pipeline.md  pipeline_strategy.md  plan.md  projects_implementation_plan.md  vision.md
interface/: CMakeLists.txt  Makefile  README.md  main.cpp  pq_daemon.cpp  prismquanta_daemon  prismquanta_daemon.cpp  prismquanta_interface.cpp
logs/: run_log.txt  self_chat_log.txt
memory/: code_analysis_report.md  development_lessons.txt  project_goals.txt  strategy_plan.txt
prompts/: input_prompt.txt
rules/: ethics_and_bias_tests.xml  pql1.xsd  pql_sample.xml  remediation_tasks.txt  rulebook.xml  rules.xsd  tasks.xml
scripts/: code_analysis.sh  define_requirements.sh  enhanced_task_manager.sh  ethics_bias_checker.sh  ethics_monitor.sh  generate_env.sh  generate_prompt.sh  llm_infer.sh  memory_review.sh  parse_pql.sh  plan_code_tasks.sh  polling.sh  pql_test_and_consequence.sh  pql_test_and_punish.sh  pql_test_and_reward.sh  remediation_tasks.sh  rule_enforcer.sh  run_planner.sh  run_task.sh  self_chat_loop.sh  send_prompt.sh  strategize_project.sh  task_manager.sh  utils.sh  validation_loop.sh
tests/: test-runner.sh
tests/bdd/: enhanced_test_runner.sh  main  native_test_runner.sh  step_definitions.sh  test-runner.sh
tests/bdd/features/: ethics_and_bias.bats  ethics_and_bias.feature  ethics_and_bias_test.sh  ethics_pipeline_integration.feature  general_rule_validation_test.sh  pql_parsing_test.sh  priority_scheduling_test.sh  rule_validation.feature  sample.bats  sample.feature
tests/results/: test_report.txt
